# cse576_sp20_hw3

./: .gitignore  CMakeLists.txt  README.md  clean.sh  download_datasets.sh  questions.txt
src/: activations.cpp  activations.h  classifier.cpp  data.cpp  matrix.cpp  matrix.h  neural.h  test.cpp  train.cpp  utils.h
